<resources>
    <string name="app_name">Fundo</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="facebook_app_id">935634950703648</string>
    <string name="fb_login_protocol_scheme">fb935634950703648</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login_text">Login</string>
    <string name="email_hint_login">Email</string>
    <string name="password_hint_login">Password</string>
    <string name="login_button_text">Login</string>
    <string name="or_text_login">Or</string>
    <string name="forgot_password_link_text">Forgot Password?</string>
    <string name="register_text">Register</string>
    <string name="name_hint_register">Name</string>
    <string name="email_hint_register">Email</string>
    <string name="password_hint_register">Password</string>
    <string name="confirm_password_hint_register">Confirm Password</string>
    <string name="mobile_hint_register">Mobile</string>
    <string name="register_button_text">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="name_drawer">Name</string>
    <string name="list_title_text">Title</string>
    <string name="list_note_text">note</string>
    <string name="note_title_text">Title</string>
    <string name="note_content_text">Note</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="enter_your_email_reset">Enter your email</string>
    <string name="back_button">back</string>
    <string name="reset_button">Reset</string>
    <string name="validate_name">Enter valid name</string>
    <string name="validate_email">Enter valid Email</string>
    <string name="validate_mobile_no">Enter valid mobile number</string>
    <string name="validate_password">Enter valid password</string>
    <string name="password_confirm_password">Enter same Password</string>
    <string name="drawer_notes_text">Notes</string>
    <string name="drawer_reminder_text">Reminders</string>
    <string name="create_a_note_toast">Create a note</string>
    <string name="note_not_saved_toast">note is not saved</string>
    <string name="deletion_not_posssible_toast">Deletion Not Possible</string>
    <string name="update_not_succesful_toast">Update not successful</string>
    <string name="deletion_failed_toast">Deletion Failed</string>
    <string name="updated_successfully_toast">Updated successfully</string>
    <string name="storage_access_required_toast">Storage access required to upload image</string>
    <string name="cancelled_toast">Canceled</string>
    <string name="error_occured_toast">error occurred</string>
    <string name="login_failed_toast">Log-in failed</string>
    <string name="facebook_login_failed_toast">Facebook Log-in failed</string>
    <string name="sign_up_unsuccessful_toast">Sign up unsuccessful</string>
    <string name="drawer_label_name">Labels</string>
    <string name="create_new_label">Create new Label</string>
    <string name="label">Label</string>
    <string name="archives">Archives</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">email</string>
    <string name="profile_logout_button">Logout</string>

</resources>