<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_1">
        <item
            android:id="@+id/notes"
            android:title="@string/drawer_notes_text"
            android:icon="@drawable/note">
        </item>

        <item
            android:id="@+id/reminders"
            android:title="@string/drawer_reminder_text"
            android:icon="@drawable/reminder">
        </item>
    </group>

    <group
        android:id="@+id/nav_group_2">
        <item
            android:id="@+id/labels"
            android:title="@string/drawer_label_name"
            android:icon="@drawable/plus">
        </item>

    </group>

</menu>