<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/close">
    </ImageView>

    <ImageButton
        android:id="@+id/dialog_profile_icon"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@+id/close_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_image"
        android:src="@drawable/ic_baseline_account_circle_24">
    </ImageButton>

    <TextView
        android:id="@+id/dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_profile_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name"
        android:textSize="30sp">
    </TextView>

    <TextView
        android:id="@+id/dialog_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/profile_email"
        android:textSize="20sp">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/profile_logout_button">
    </com.google.android.material.button.MaterialButton>

</RelativeLayout>